added preview compile flag